refactor: data più importanza ai link nell'header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <div class="container-centered">
             <nav>
-                <a href="">Donna</a>
-                <a href="">Uomo</a>
-                <a href="">Bambini</a>
+                <a href=""><h1>Donna</h1></a>
+                <a href=""><h1>Uomo</h1></a>
+                <a href=""><h1>Bambini</h1></a>
             </nav>
     
             <div id="container-logo">
