feat: completato footer

--- a/index.html
+++ b/index.html
@@ -215,11 +215,24 @@
     <footer>
         <div class="container-centered">
             <div id="info-box">
+                <h2>Booleando s.r.l</h2>
+                <div id="footer-links">
+                    <a href="">Informazioni legali</a>
 
+                    <a href="">Informativa sulla privacy</a>
+
+                    <a href="">Diritto di recesso</a>
+                </div>
             </div>
 
             <div id="social-box">
-
+                <h2>Trovaci anche su</h2>
+                <div id="social-links">
+                    <img src="img/icons8-twitter.svg" alt="Icona Twitter">
+                    <img src="img/icons8-instagram.svg" alt="Icona Instagram">
+                    <img src="img/icons8-facebook.svg" alt="Icona Facebook">
+                    <img src="img/icons8-youtube-logo.svg" alt="Icona Youtube">
+                </div>
             </div>
         </div>
     </footer>
